# epubr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  devshell.nix  flake.nix
nix/: devshell.nix  formatter.nix
src/: args.rs  db.rs  hash.rs  log.rs  main.rs  metadata.rs  model.rs  scan.rs  util.rs
src/commands/: check.rs  common.rs  count.rs  load.rs  merge.rs  mod.rs  prune.rs  rehash.rs
