[package]
name = "epubr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
walkdir = "2"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
percent-encoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
humansize = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

