[package]
name = "epubr"
version = "0.2.0"
edition = "2024"
description = "Tools for scanning and managing EPUB files"
license-file = "LICENSE"
repository = "https://github.com/sguzman/epubr"


[package.metadata.release]
# Versioning behavior
shared-version = true              # bump all crates together
dependent-version = "upgrade"      # update internal deps to the new version


# Safety / policy
allow-branch = ["main"]            # only release from main (adjust as needed)

# Tagging / committing
tag-name = "v{{version}}"
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): {{version}}"
consolidate-commits = true
push = false                       # keep it local; you push manually
publish = false
sign-tag = false                   # change to true if you sign

# Run BEFORE the tag exists; compute range from previous tag to HEAD,
# tell git-cliff to label the section as the new tag.

pre-release-hook = [
  "sh", "-c",
  '''
  set -e
  prev="$(git describe --tags --abbrev=0 2>/dev/null || true)"
  if [ -n "$prev" ]; then
    # Overwrite the entire changelog using the whole history up to HEAD,
    # but title the newest section with the upcoming version.
    git-cliff --tag "v{{version}}" -o CHANGELOG.md
  else
    git-cliff --tag "v{{version}}" -o CHANGELOG.md
  fi
  git add CHANGELOG.md
  git commit --amend --no-edit
  '''
]

[dependencies]
anyhow = "1.0.100" # latest 1.x on docs.rs :contentReference[oaicite:1]{index=1}
thiserror = "2.0.16" # latest 2.x :contentReference[oaicite:2]{index=2}
walkdir = "2.5.0" # latest 2.x :contentReference[oaicite:3]{index=3}
rayon = "1.11.0" # latest 1.x :contentReference[oaicite:4]{index=4}
xxhash-rust = { version = "0.8.15", features = [
  "xxh3",
] } # latest 0.8.x :contentReference[oaicite:5]{index=5}
chrono = { version = "0.4.42", features = [
  "serde",
] } # latest 0.4.x :contentReference[oaicite:6]{index=6}
serde = { version = "1.0.225", features = [
  "derive",
] } # latest 1.x :contentReference[oaicite:7]{index=7}
serde_json = "1.0.145" # latest 1.x :contentReference[oaicite:8]{index=8}
clap = { version = "4.5.48", features = [
  "derive",
] } # latest 4.x :contentReference[oaicite:9]{index=9}
tracing = "0.1.41" # latest 0.1.x :contentReference[oaicite:10]{index=10}
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
url = "2.5.7" # latest 2.x :contentReference[oaicite:12]{index=12}
percent-encoding = "2.3.2" # latest 2.x :contentReference[oaicite:13]{index=13}
zip = { version = "5.1.1", default-features = false, features = [
  "deflate",
] } # latest 5.x :contentReference[oaicite:14]{index=14}
roxmltree = "0.20" # current series :contentReference[oaicite:15]{index=15}
humansize = "2.1.3" # latest 2.x :contentReference[oaicite:16]{index=16}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
